# architectural-style-classification

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
notebooks/: classify_arch.ipynb  classify_arch_semantic_segmentation.ipynb  data_collection.ipynb
src/arch_classify/: visualize.py
