[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
version = "0.0.1"
name = "architectural-style-classification"
description = "arch-style-classification"
requires-python = ">=3.7"
keywords = ["architecture"]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "jupyter",
    "tensorflow",
    "pandas",
    "matplotlib",
    "icrawler",
    "pillow",
]

[project.optional-dependencies]
test = [
    "pre-commit",
]

[tool.hatch.envs.default]
features = [
    "test",
]

post-install-commands = [
    "pre-commit install",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.envs.default.scripts]
fmt = [
    "pre-commit run --all --all-files",
]

[tool.hatch.build.targets.wheel]
packages = ["build"]